GL/src/test/deca/context/valid/provided/methCall.deca
class A {
    int x = readInt();

    void meth1(int x, float y){
        this.x = this.x + x;
    }

    void meth2(){
        meth1(1,2);
    }
}

{
    A a = new A();
    meth1(2, 1);
}